--- a/lib-banner/build.gradle
+++ b/lib-banner/build.gradle
@@ -12,9 +12,14 @@ android {
     }
 
     buildTypes {
+        debug{
+            minifyEnabled false
+            buildConfigField 'String', 'TAG', '"JBanner"'
+        }
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+            buildConfigField 'String', 'TAG', '"JBanner"'
         }
     }
 
